<resources>
    <string name="app_name">AmazighApp</string>
    <string name="play">Speel</string>
    <string name="practise">Oefen</string>
    <string name="score">Score</string>
    <string name="about_us">Over Ons</string>

    <string-array name="spinner_data">
        <item>item 1</item>
        <item>item 2</item>
        <item>item 3</item>
        <item>item 4</item>
    </string-array>
</resources>